# CXLMemUring

./: .gitignore  .gitmodules  CMakeLists.txt  CiraDialectREADME.md  IMPLEMENTATION_SUMMARY.md  README.md  gpu_executor.cpp
.github/workflows/: cmake-single-platform.yml
bench/mcf/: implicit.c  implicit.h  main_wrapper.c  mcf.c  mcfutil.c  output.c  output.h  pbeampp.c  readmin.c  treeup.c
driver/: Makefile  cxl_type2_numa.c  rcrb_write.c
examples/: clangir_integration_example.cpp  tosa_offload_example.mlir  tosa_offload_expected.mlir
include/: CMakeLists.txt
include/Analysis/: TOSAOffloadAnalysis.h
include/Conversion/: CIRA.h  CIRToCira.h  CiraToLLVM.h  Passes.h  Passes.td  TOSAToCira.h
include/Dialect/: CMakeLists.txt  CiraOps.h  CiraOps.td  FunctionUtils.h  OffloadOp.h  OffloadOverheadAnalysis.h  OffloadProfile.h  RemoteMem.h  RemoteMem.td  RemoteMemDialect.h  RemoteMemRef.h  RemoteMemTypeLower.h  TwoPassTimingAnalysis.h
include/Dialect/Transforms/: Passes.h  Passes.td
include/Lowering/: RemoteMemToLLVM.h
include/compat/: LLVM.h
lib/polygeist/: CMakeLists.txt  PolygeistOpCanonicalizers.cpp
lib/polygeist/Passes/: CMakeLists.txt
profile_results/: combined_profile.json  example_mcf_profile.json  mcf_baseline_profile.json  per_offload_point_profile.json  profile_1024.json  profile_128.json  rtlsim_output.txt  vortex_profile.json  vortex_rtlsim.json  x86_baseline.json
profile_results/dataframe/: baseline_profile.json  combined_baseline.json  dataframe_timing_annotations.h  injected_profile.json  twopass_profile.json  vortex_profile.json  x86_baseline.txt
profile_results/gapbs/: experiment_results.json
profile_results/mcf/: .x86_time  compiler_offload_profile.json  compiler_profile.json  experiment_results.json  mcf_baseline_profile.json  mcf_pricing_rtlsim.txt  mcf_twopass_profile.json  profile_256.json  profile_512.json  profile_64.json  rtlsim_test_output.txt
profile_results/monetdb/: baseline_profile.json  baseline_workload.json  injected_profile.json  (+3 more)
runtime/: CMakeLists.txt  Makefile.riscv64  Makefile.vortex  README.md  bc_riscv.cpp  bc_x86.cpp  cira_jit.cpp  cira_jit_engine.cpp  compiler_rt_stubs.c  gapbs_cxx_runtime_support.cpp  iostream_init.cpp  mcf_profiler.h  mcf_vortex_offload.h  offload_profiler.h  shared_protocol.h  string_helpers.cpp  vortex_device.cpp  vortex_device.h  vortex_offload_backend.cpp  vortex_protocol.h  vortex_verilator_sim.cpp  vortex_verilator_sim.h
runtime/examples/: CMakeLists.txt  graph_processing.cpp  simple_test.cpp
runtime/include/: CiraRuntime.h  Type2GpuDevice.h  cira_jit.h  cira_jit_engine.h
runtime/src/: CiraRuntime.cpp  Type2GpuDevice.cpp
runtime/test/: CMakeLists.txt  bench_cira_jit.cpp  e2e_profiled.cpp  test_cira_jit.cpp  test_kernel_exec.cpp  test_offload_engine.cpp  test_twopass_runtime.cpp  test_vortex_e2e.cpp
scripts/: build.sh  build_gapbs.sh  build_mcf_heterogeneous.sh  cleanup_cir_remnants.py  cleanup_unrealized_casts.py  compile_mcf_heterogeneous.sh  compile_vortex_kernel.sh  export_profile_to_compiler.sh  fix_module_allocas.py  fix_scf_while_yields.py  fix_trivial_constructors.py  generate_vtune_report.py  gpu_offload_all_workloads.sh  inject_gapbs_runtime_hooks.py  pgo_iterate.sh  plot.py  plot1.py  profile_feedback_compiler.py  profile_guided_e2e.sh  profile_guided_mcf.sh  profile_monetdb_kernels.py  remove_leftover_scf.py  run_dataframe_twopass_compiler.sh  run_gapbs_twopass_compiler.sh  run_mcf_twopass_compiler.sh  run_mcf_vortex_rtlsim.sh  run_monetdb_twopass_compiler.sh  run_profile_feedback_loop.sh  run_profile_sweep.sh  run_vortex_profile.sh  summarize_gapbs_vtune_cxl.py  vtune_gapbs_cxl_compare.sh  vtune_monetdb_perquery.sh  vtune_profile_all.sh  vtune_profile_all_benchmarks.sh  vtune_uarch_exploration.sh
src/: CMakeLists.txt  driver.cpp
src/Analysis/: CMakeLists.txt  TOSAOffloadAnalysis.cpp
src/Backend/: CiraRuntimeCodegen.cpp
src/Conversion/: CIRA.cpp  CIRToCira.cpp  CMakeLists.txt  CiraToLLVM.cpp  SCFCIRAPattern.cpp  SCFToCira.cpp  TOSAToCira.cpp
src/Dialect/: CMakeLists.txt  CiraOps.cpp  FunctionUtils.cpp  GpuKernelGeneration.cpp  GpuMemoryOptimization.cpp  GpuOffloadDecision.cpp  GpuRuntimeLowering.cpp  OffloadOp.cpp  OffloadOverheadAnalysis.cpp  OffloadProfile.cpp  ReadFromProfile.cpp  RemoteMemDialect.cpp  RemoteMemRef.cpp  RemoteMemTypeLowerer.cpp  TwoPassTimingAnalysis.cpp  Type2GpuCodeGen.cpp  VortexKernelGen.cpp  WorkloadAnalysis.cpp
src/Dialect/Transforms/: SearchRemote.cpp
src/Integration/: CIRToCIRAIntegration.cpp
src/Lowering/: CMakeLists.txt  EmitLLVM.cpp  RemoteMemToLLVM.cpp
test/: CMakeLists.txt  cira-graph-example.mlir  cira-linked-list-transform.mlir  coherency_stress_test.cpp  example.mlir  gapbs-cira.mlir  mcf-twopass-pricing.mlir  monetdb-hashjoin-cira.mlir  offload-install-cacheline.mlir  run_tests.sh  runtime_llc_tile_mock.cpp  spatter-ume-hashjoin-cira.mlir  tosa_to_cira_test.mlir
test/cir/: cir_frontend.c
test/kernels/: mcf_pricing.c  mcf_pricing_test.c  mcf_pricing_vortex.cpp  mcf_simple_test.c  simple_add.c  simple_add.dump  simple_add.vxbin  vector_add.c  vx_intrinsics.h
test/mlir/: aliasing.mlir  aliasing_two.mlir  bounds_var.mlir  check_cira_attrs.mlir  check_get_paddr_lowering.mlir  check_llc_tile_lowering.mlir  check_remote_extract.mlir  deep_nest.mlir  deep_nest_branch.mlir  generate_llc_slice_synthetic.py  indirect_store.mlir  llc_slice_synthetic_100.mlir  mixed.mlir  mixed_precision.mlir  mixed_sizes.mlir  negative_cast.mlir  nested_shapes.mlir  reduction.mlir  types_f64.mlir  types_i32.mlir
test/simple/: graph_pattern.mlir  graph_pattern_fixed.mlir  simple_add.c  simple_add.cir  simple_add.mlir  simple_graph.c  simple_graph.cir  simple_graph_pattern.mlir  simple_graph_remote.mlir  test_cira.mlir  test_graph.c  test_simple.mlir
test/vortex/: Makefile  run_tests.sh  run_vortex_rtl_tests.sh  setup_vortex_simulation.sh  test_reduction.c  test_vector_add.c  test_vortex_backend.c
test/vortex/kernels/: matmul.cl  reduction.cl  vector_add.cl
tests/: perf_test_cxl_patterns.cpp  test_type2_llama_offload.cpp
(+62 files in other folders)
